# Calibrator

./: .gitignore  .pylintrc  Calibrator_App.py  LICENSE  README.md  Rotator_Communication.py  SunSensor_Lib.py  calibrationSensor.py  design.py  design.ui  motionParameters.txt  normalFallCoord.txt  pyproject.toml  rotatorDriver.py  test.py  utils.py
C_CPP/Samples/: Programming Examples.txt
IntensityTables/: 05-02-2023_17-28-27_Intensity.txt  05-02-2023_17-36-02_Intensity.txt  05-02-2023_17-43-12_Intensity.txt  05-15-2023_12-21-19_Intensity.txt  05-15-2023_12-31-17_Intensity.txt  05-15-2023_13-02-37_Intensity.txt  05-15-2023_13-19-20_Intensity.txt  05-16-2023_10-38-38_Intensity.txt  05-16-2023_11-03-20_Intensity.txt  05-16-2023_11-44-59_Intensity.csv  05-16-2023_12-00-31_Intensity.csv  05-16-2023_12-07-09_Intensity.csv  05-16-2023_12-09-34_Intensity.csv  05-16-2023_12-27-54_Intensity.csv  05-17-2023_09-05-56_Intensity.txt  05-17-2023_09-33-11_Intensity.txt  05-17-2023_09-34-06_Intensity.txt  05-17-2023_09-38-34_Intensity.txt  05-17-2023_09-58-05_Intensity.txt  05-17-2023_10-16-40_Intensity.txt  05-17-2023_10-37-04_Intensity.txt  05-17-2023_10-45-56_Intensity.txt  05-17-2023_10-56-41_Intensity.txt  05-17-2023_11-06-54_Intensity.txt  05-17-2023_11-18-41_Intensity.txt  05-17-2023_11-28-11_Intensity.txt  05-17-2023_11-38-50_Intensity.txt  05-17-2023_11-58-10_Intensity.txt  05-17-2023_12-10-18_Intensity.txt  05-17-2023_12-24-03_Intensity.txt
Real_sensor_calibration/: ДСГ2.xlsx  ДСГ5.xlsx  ДСГ8.xlsx  ДСГ9.xlsx
Sensor_calibration/: ДСГ1.xlsx  ДСГ10.xlsx  ДСГ11_1.xlsx  ДСГ11_2.xlsx  ДСГ3..xlsx  ДСГ4.xlsx  ДСГ5.xlsx  ДСГ6.xlsx  ДСГ7.xlsx
acspy/: acsc.py  control.py  prgs.py
dsg/calibrator_gui/: calibrator_app.py  design.py  design.ui
optical_stand/calibrator_gui/: calibrator_app.py  design.ui
utils/Angle_logs/: 01-12-2024_16-56-42_Velocity.csv  01-12-2024_17-02-59_Velocity.csv  01-18-2024_12-24-11_Velocity.csv  01-18-2024_12-25-12_Velocity.csv  01-18-2024_12-25-53_Velocity.csv  01-18-2024_12-26-24_Velocity.csv  01-18-2024_12-26-50_Velocity.csv  01-18-2024_12-34-15_Velocity.csv  01-18-2024_12-34-34_Velocity.csv  01-18-2024_12-34-49_Velocity.csv  01-18-2024_12-35-03_Velocity.csv  01-18-2024_12-35-16_Velocity.csv  01-18-2024_12-35-28_Velocity.csv  01-18-2024_12-35-39_Velocity.csv  (+46 more)
(+153 files in other folders)
