[tool.poetry]
name = "sunsensorcalibration"
version = "0.1.0"
description = ""
authors = ["Dennis <dn1607727@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry-add-requirements-txt = "^1.1.1"
contourpy = "1.0.7"
crcmod = "1.7"
cycler = "0.11.0"
fonttools = "4.38.0"
future = "0.18.3"
iso8601 = "1.1.0"
kiwisolver = "1.4.4"
matplotlib = "3.7.0"
numpy = "1.24.2"
opencv-python = "4.7.0.72"
packaging = "23.0"
pillow = "9.4.0"
pyparsing = "3.0.9"
pyserial = "3.5"
python-dateutil = "2.8.2"
pywin32 = "305"
pyyaml = "6.0"
six = "1.16.0"
pyqt5designer = "^5.14.1"
pyqt5-tools = "^5.15.9.3.3"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
